# book-reader

./: .gitignore  Cargo.toml  README.md  index.js  package.json  start.sh
config/: index.js  index.json
server/: app.js  router.js  start.js  worker.js
server/controller/: index.js
server/lib/: reader.js  setting.js
server/middleware/: static.js
server/middlewares/: static.js
server/view/: index.html  template.html
src/: main.rs
src/global/: mod.rs
src/service/: mod.rs
src/utils/: config.rs  file.rs  mod.rs
src/view/: index.html  user.html
static/script/: babel.config.js  webpack.base.config.js  webpack.dev.config.js  webpack.prod.config.js
static/src/css/: github-md-style-dark.less  github-md-style.less  index.less
static/src/css/mod/: content.less  header.less  mobile.less  sider.less  summary.less
static/src/css/theme/: github-md-style-dark.less
static/src/dep/: highlight.js  marked.js
static/src/js/: index.js  page.js
static/src/js/lib/: base.js  config.js  data.js  header.js  image.js  markdown.js  page.js  router.js  sider.js  url.js  view.js
static/src/js/util/: toast.js  toast.less
