[package]
name = "book-reader"
version = "0.1.0"
authors = ["chenshenhai <cshenhai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
